--- a/tensorflow_for_deep_learning/RoboND-NN-Lab/solutions.ipynb
+++ b/tensorflow_for_deep_learning/RoboND-NN-Lab/solutions.ipynb
@@ -97,7 +97,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -112,8 +112,12 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
